reorganize and add half of 11 lab

--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,8 @@
         <td><input id="num" type="number" required=true/></td>
       </tr>
     </table>
-    <button id="btn" type="button" onclick="execute()">Run</button>
+    <button id="btn9" type="button">Start - 9 lab</button>
+    <button id="btn11" type="button">Start - 11 lab</button>
   </form>
   <div id="chart_div"></div>
 </body>
