--- a/Index.html
+++ b/Index.html
@@ -31,22 +31,23 @@
         <td>Auto</td>
         <td>First command intensity</td>
         <td><input id="com1" type="number" required=true/></td>
+        <td>Intensity</td>
+        <td><input id="intensity" type="number" required=true/></td>
       </tr>
       <tr>
         <td>Number of experiments </td>
         <td><input id="num" type="number" required=true/></td>
         <td>Second command intensity</td>
         <td><input id="com2" type="number" required=true/></td>
+        <td>Number of experiments</td>
+        <td><input id="numExp" type="number" required=true/></td>
       </tr>
       <tr>
         <td><button id="btn9" type="button">Start - 9 lab</button></td>
         <td><button id="btn11" type="button">Start - 11 lab</button></td>
         <td><button id="btn12" type="button">Start - 12 lab</button></td>
-      </tr>
-      <tr>
         <td></td>
-        <td></td>
-        <td><div id="match_div"></div>
+        <td><button id="btn13" type="button">Start - 13 lab</button></td>
       </tr>
     </table>
   </form>
