--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,22 @@
       <tr>
         <td>Prob 3 </td>
         <td><input id="p3" type="number" step="0.01" required=true/></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Mode (1/2)</td>
+        <td><input id="modeGauss" type="number" required=true/></td>
       </tr>
       <tr>
         <td>Prob 4 </td>
         <td><input id="p4" type="number" step="0.01" required=true/></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Mean</td>
+        <td><input id="meanGauss" type="number" required=true/></td>
       </tr>
       <tr>
         <td>Prob 5 </td>
@@ -33,6 +45,8 @@
         <td><input id="com1" type="number" required=true/></td>
         <td>Intensity</td>
         <td><input id="intensity" type="number" required=true/></td>
+        <td>Variance</td>
+        <td><input id="varianceGauss" type="number" required=true/></td>
       </tr>
       <tr>
         <td>Number of experiments </td>
@@ -41,6 +55,8 @@
         <td><input id="com2" type="number" required=true/></td>
         <td>Number of experiments</td>
         <td><input id="numExp" type="number" required=true/></td>
+        <td>Number of experiments</td>
+        <td><input id="numExpGauss" type="number" required=true/></td>
       </tr>
       <tr>
         <td><button id="btn9" type="button">Start - 9 lab</button></td>
@@ -48,6 +64,8 @@
         <td><button id="btn12" type="button">Start - 12 lab</button></td>
         <td></td>
         <td><button id="btn13" type="button">Start - 13 lab</button></td>
+        <td></td>
+        <td><button id="btn14" type="button">Start - 14 lab</button></td>
       </tr>
     </table>
   </form>
